--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,9 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'agence de webdesign lyonnaise La Panthère" height="40"></a>
+				<a class="navbar-brand" href="index.html" aria-label="Se rendre sur la page d'accueil">
+					<img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'agence de webdesign lyonnaise La Panthère" height="40">
+				</a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -43,7 +45,7 @@
 			<nav class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a href="index.html" aria-label="Se rendre sur la page d'accueil">Accueil</a>
 					</li>
 				</ul>
 			</nav>
@@ -109,7 +111,7 @@
 				</div>
 				<div class="col-sm-6">
 					<p>
-						<a href="mailto:contact@agencelapanthere.com">contact@agencelapanthere.com</a><br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+						<a href="mailto:contact@agencelapanthere.com" aria-label="Écrire un mail à l'agence La Panthère">contact@agencelapanthere.com</a><br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 					</p>
 				</div>
 			</div>
@@ -135,22 +137,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-twitter icon-md" aria-label="Se rendre sur la page Twitter de La Panthère"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-facebook icon-md" aria-label="Se rendre sur la page Facebook de La Panthère"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md" aria-label="Se rendre sur la page Dribble de La Panthère"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-instagram icon-md" aria-label="Se rendre sur la page Instagram de La Panthère"></span></a>
 						</div>
 					</div>
 				</div>
