Format d'images : png => webp (2 oublis)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="container bloc-sm">
 		<div class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html" aria-label="Recharger la page d'accueil"><img src="img/agence-la-panthere-monochrome.svg" alt="logo complet de l'agence de webdesign La Panthère" height="40"></a>
+				<a class="navbar-brand" href="index.html" aria-label="Recharger la page d'accueil"><img src="img/agence-la-panthere-monochrome.svg" alt="logo complet de l'agence de webdesign La Panthère" width="217" height="40"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -67,7 +67,7 @@
 		<div class="container bloc-lg">
 			<div class="row tight-width-whitespace">
 				<div class="col-sm-12">
-					<img src="img/logo.png" width="100px" class="center-block image-resize-mode" alt="Logo sans texte de l'agence de webdesign La Panthère">
+					<img src="img/logo.webp" width="100" height="100" class="center-block image-resize-mode" alt="Logo sans texte de l'agence de webdesign La Panthère">
 					<h1 class="text-center hero-bloc-text tc-white ">
 						<span class="brand-name">La Panthère</span>
 						<br>
@@ -170,7 +170,7 @@
 			<div class="row tight-width-whitespace portfolio-row">
 				<article class="portfolio__card col-sm-6">
 					<a href="#" data-lightbox="img/1-refonte-site-journal-local_lightbox.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb" aria-label="Afficher l'image">
-						<img src="img/1-refonte-site-journal-local.webp" alt="Refonte d'un site web pour un journal lyonnais" class="img-responsive portfolio-thumb">
+						<img src="img/1-refonte-site-journal-local.webp" alt="Refonte d'un site web pour un journal lyonnais" class="img-responsive portfolio-thumb" width="320" height="320">
 					</a>
 					<h3 class="mg-md text-center">
 						Refonte d'un site web pour un journal local
@@ -181,7 +181,7 @@
 				</article>
 				<article class="portfolio__card col-sm-6">
 					<a href="#" data-lightbox="img/2-creation-site-photographe_lightbox.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb" aria-label="Afficher l'image">
-						<img src="img/2-creation-site-photographe.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes">
+						<img src="img/2-creation-site-photographe.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" width="320" height="320">
 					</a>
 					<h3 class="mg-md text-center">
 						Création d'un site web pour photographes
@@ -194,7 +194,7 @@
 			<div class="row tight-width-whitespace portfolio-row">
 				<article class="portfolio__card col-sm-6">
 					<a href="#" data-lightbox="img/3-creation-site-web-voyageur.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb" aria-label="Afficher l'image">
-						<img src="img/3-creation-site-web-voyageur.webp" class="img-responsive portfolio-thumb" alt="Création d'un site internet pour un voyageur">
+						<img src="img/3-creation-site-web-voyageur.webp" class="img-responsive portfolio-thumb" alt="Création d'un site internet pour un voyageur" width="320" height="320">
 					</a>
 					<h3 class="mg-md text-center">
 						Création d'un site internet pour un voyageur
@@ -205,7 +205,7 @@
 				</article>
 				<article class="portfolio__card col-sm-6">
 					<a href="#" data-lightbox="img/4-conception-site-agence-mariage.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb" aria-label="Afficher l'image">
-						<img src="img/4-conception-site-agence-mariage.webp" class="img-responsive portfolio-thumb" alt="Conception d'un site pour une agence de mariage">
+						<img src="img/4-conception-site-agence-mariage.webp" class="img-responsive portfolio-thumb" alt="Conception d'un site pour une agence de mariage" width="320" height="320">
 					</a>
 					<h3 class="mg-md text-center">
 						Conception d'un site pour une agence de mariage
